# cpputils

./: .travis.yml  README.md
.github/workflows/: cmake.yml
src/: .clang-format  CMakeLists.txt
src/abstractfactory/: CMakeLists.txt
src/abstractfactory/inc/factory/: abstractfactory.h
src/abstractfactory/src/: main.cpp
src/abstractfactory/test/: CMakeLists.txt
src/abstractfactory/test/src/: factory_test.cpp
src/crtp/: CMakeLists.txt
src/crtp/src/: main.cpp
src/example/certs/: certificate.pem  key.pem
src/example/tcpepollserver/: CMakeLists.txt  main.cpp
src/example/tcpsecuresocket/: CMakeLists.txt  main.cpp
src/example/tcpsecuresocket/cert/: cert.pem  clientcert.pem  clientkey.pem  key.pem
src/example/tcpsocket/: CMakeLists.txt  main.cpp
src/example/thread/: CMakeLists.txt  main.cpp
src/factory/: CMakeLists.txt  FactoryConfig.cmake
src/factory/inc/factory/: basemaker.h  factory.h
src/factory/src/: main.cpp
src/factory/test/: CMakeLists.txt
src/factory/test/src/: factory_test.cpp
src/graphs/: CMakeLists.txt  GraphsConfig.cmake
src/graphs/inc/graphs/: graph.h
src/graphs/test/: CMakeLists.txt
src/graphs/test/src/: graphs_test.cpp  main.cpp
src/linux/: CMakeLists.txt
src/linux/futex/: CMakeLists.txt  FutexConfig.cmake
src/linux/futex/inc/futex/: futex.hpp  shared_futex.hpp
src/linux/futex/test/: CMakeLists.txt
src/linux/futex/test/src/: futex_test.cpp
src/linux/shm/: CMakeLists.txt  ShmConfig.cmake
src/linux/shm/inc/shm/: shm.hpp
src/linux/shm/test/: CMakeLists.txt
src/linux/shm/test/src/: shm_test.cpp
src/measuretime/: CMakeLists.txt  MeasureTimeConfig.cmake
src/measuretime/inc/measuretime/: measuretime.h
src/measuretime/src/: main.cpp
src/measuretime/test/: CMakeLists.txt
src/measuretime/test/src/: main.cpp  measure_test.cpp
src/memallocatortracer/: CMakeLists.txt  MemAllocatorTracerConfig.cmake
src/memallocatortracer/inc/memallocatortracer/: memallocatortracer.h
src/memallocatortracer/test/: CMakeLists.txt
src/memallocatortracer/test/src/: main.cpp
src/misc/colors/: CMakeLists.txt  ColorsConfig.cmake
src/misc/colors/inc/misc/: colors.h
src/misc/colors/test/: CMakeLists.txt
src/misc/colors/test/src/: colors_test.cpp
src/misc/cypher/: CMakeLists.txt  FindGCRYPT.cmake  generate_pem.sh
src/misc/cypher/inc/misc/: asymmetricalcipher.hpp  cipher2.hpp  cypher.hpp  gcrypt.hpp  icipher.hpp  ikey.hpp  pemkey.hpp  sealcipher.hpp  symmetricalcipher.hpp
src/misc/cypher/src/: asymmetricalcipher.cpp  cipher2.cpp  gcrypt.cpp  main.cpp  pemkey.cpp  sealcipher.cpp  symmetricalcipher.cpp
src/misc/openssl-aes-cbc/: CMakeLists.txt
src/misc/openssl-aes-cbc/src/: aes128openssl.cpp
src/signal/: CMakeLists.txt  SignalConfig.cmake
src/signal/inc/signal/: signal.h
src/signal/test/: CMakeLists.txt
src/signal/test/src/: main.cpp  signal_test.cpp
src/sockets/: CMakeLists.txt  SocketsConfig.cmake
src/sockets/doc/: diagrams.xmi
src/sockets/inc/sockets/: example.h  isocket.h  isocketclient.h  isocketserver.h  securesocket.h  securesocketclient.h  securesocketserver.h  socket.h  socketclient.h  socketserver.h
src/sockets/src/: example.cpp  isocket.cpp  isocketclient.cpp  isocketserver.cpp  securesocket.cpp  securesocketclient.cpp  securesocketserver.cpp  socket.cpp  socketclient.cpp  socketserver.cpp
src/sockets/test/: CMakeLists.txt
src/sockets/test/src/: sockets_test.cpp
src/threadpool/: CMakeLists.txt  ThreadPoolConfig.cmake
src/threadpool/inc/threadpool/: ithread.h  thread.h  threadpool.h
src/threadpool/src/: thread.cpp  threadpool.cpp
src/threadpool/test/: CMakeLists.txt
src/threadpool/test/src/: threadpool_test.cpp
src/tree/: CMakeLists.txt  TreeConfig.cmake
src/tree/inc/tree/: btree.h
src/tree/src/: main.cpp
src/tree/test/: CMakeLists.txt
src/tree/test/src/: tree_test.cpp
